<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="title">Look at my GUI</string>
    <string name="button">Click Here</string>
    <string name="checkbox">Check this out!</string>
    <string name="switchbox">Switch on / off</string>
    <string name="textbox">Type here</string>

    <string name="toast">Here\'s more information</string>

    <string name="snackbar_off">The switch is now off</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_undo">Undo</string>
</resources>