<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/title"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:width="200dp"
        android:text="@string/button"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_weight="1"
        android:text="@string/checkbox" />

    <ImageButton
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switchbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:scaleType="fitXY"
        android:text="@string/switchbox" />

    <EditText
        android:id="@+id/textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:gravity="fill"
        android:hint="@string/textbox"
        android:inputType="textPersonName|textCapWords" />

</GridLayout>